--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dlajabunyi",
   "version": "0.0.1",
   "description": "mvp",
-  "productName": "dlajanyunyi",
+  "productName": "dlajanbunyi",
   "author": "themePrys",
   "private": true,
   "scripts": {
