--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@quasar/extras": "^1.16.4",
     "@vue-pdf-viewer/viewer": "^1.1.2",
     "axios": "^1.2.1",
-    "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
     "quasar": "^2.16.0",
-    "vue": "^3.4.18",
+    "vue": "^3.4.38",
+    "vue_leaflet": "^1.0.2",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vueleaflet": "^3.0.2"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.9.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "autoprefixer": "^10.4.2",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.14",
     "vue-sound": "^0.1.10"
   },
